# fast-api-media-sharing-app

./: .env  pyproject.toml
app/: app.py  db.py  schemas.py
