[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.7.0",
    "python-dotenv>=1.2.2",
    "unicorn[standard]>=2.1.4",
    "uvicorn>=0.49.0",
]
